syntax = "proto3";

package DC.Packet.Defines;

option java_package = "com.packets.defines";
option java_outer_classname = "Defines";
option java_multiple_files = false;

message Define_Account {
  enum LengthText {
    NONE = 0;
    MIN = 2;
    MAX = 20;
  }

  enum CurrencyType {
    CURRENCY_NONE = 0;
    BLUE_STONE_SHARD = 1;
    RED_STONE_SHARD = 2;
  }

  enum LoginType {
    LOGIN_TYPE_NONE = 0;
    STEAM = 1;
    EPIC = 2;
    IRONMACE = 3;
    CHAF = 4;
    MICROSOFT = 5;
  }

  enum AccountStatus {
    ACCOUNT_STATUS_NONE = 0;
    ACCOUNT_STATUS_SQUIRE = 1;
    ACCOUNT_STATUS_LEGEND = 2;
  }

}

message Define_Character {
  enum LengthNickName {
    NONE = 0;
    MIN = 2;
    MAX = 20;
  }

  enum Limit {
    NONE_Limit = 0;
    MAX_COUNT = 8;
  }

}

message Define_Party {
  enum MemberCountLimit {
    NONE = 0;
    MAX = 3;
    MIN = 1;
  }

}

message Define_Item {
  enum InventoryId {
    NONE = 0;
    CHEST = 1;
    BAG = 2;
    EQUIPMENT = 3;
    STORAGE = 4;
    PURCHASED_STORAGE_0 = 5;
    PURCHASED_STORAGE_1 = 6;
    PURCHASED_STORAGE_2 = 7;
    PURCHASED_STORAGE_3 = 8;
    PURCHASED_STORAGE_4 = 9;
    SHARED_STASH_0 = 20;
    MAX = 30;
  }

  enum rarityType {
    NONE_RARITY_TYPE = 0;
    POOR = 1;
    COMMON = 2;
    UNCOMMON = 3;
    RARE = 4;
    EPIC = 5;
    LEGEND = 6;
    UNIQUE = 7;
  }

  enum LootState {
    NONE_SOURCE = 0;
    SUPPLIED = 1;
    LOOTED = 2;
    HANDLED = 3;
    CRAFT = 4;
  }

}

message Define_Equipment {
  enum SlotId {
    NONE = 0;
    HEAD = 1;
    CHEST = 2;
    HANDS = 3;
    LEGS = 4;
    FOOT = 5;
    BELT_A = 6;
    BELT_B = 7;
    UTILITY_A_1 = 8;
    UTILITY_B_1 = 9;
    PRIMARY_A = 10;
    SECONDARY_A = 11;
    PRIMARY_B = 12;
    SECONDARY_B = 13;
    UTILITY_A_2 = 14;
    UTILITY_A_3 = 15;
    UTILITY_B_2 = 16;
    UTILITY_B_3 = 17;
    SOULHEART = 18;
    NECKLACE = 19;
    RING_A = 20;
    RING_B = 21;
    BACK = 22;
  }

}

message Define_Message {
  enum LoopFlag {
    NONE = 0;
    BEGIN = 1;
    PROGRESS = 2;
    END = 3;
  }

  enum UpdateFlag {
    NONE_UPDATE_FLAG = 0;
    INSERT = 1;
    UPDATE = 2;
    DELETE = 3;
  }

  enum SelectFlag {
    NONE_SELECT_FLAG = 0;
    OK = 1;
    CANCEL = 2;
  }

}

message Define_Match {
  enum Match_Region {
    NONE = 0;
    US_WEST = 1;
    US_EAST = 2;
    EU_CENTRAL = 3;
    KR = 4;
    SINGAPORE = 5;
    SYDNEY = 6;
    SAOPAULO = 7;
    TOKYO = 8;
  }

}

message Define_Stat {
  enum StatType {
    NONE_STAT = 0;
    GAMES_PLAYED = 1;
    EXTRACTIONS = 2;
    DOWN_PORTALS_TAKEN = 3;
    KILLS = 4;
    DEATHS = 5;
    TREASURE_VALUE_EXTRACTED = 6;
    MONSTERS_KILLED = 7;
    SUBBOSSES_KILLED = 8;
    BOSSES_KILLED = 9;
    ORNATE_CHESTS_OPENED = 10;
    ROYAL_COFFINS_OPENED = 11;
    LIONS_HEAD_CHESTS_OPENED = 12;
    GOLDEN_CHESTS_OPENED = 13;
    MARVELOUS_CHESTS_OPENED = 14;
    ALLIES_REVIVED = 15;
    PLAYER_KILL_ASSIST = 16;
    MONSTER_KILL_ASSIST = 17;
    SUBBOSS_KILL_ASSIST = 18;
    BOSS_KILL_ASSIST = 19;
  }

}

message Define_Game {
  enum AdvPointType {
    NONE = 0;
    PlayerKill = 1;
    DungeonDown = 2;
    MonsterKill = 3;
    PropsInteraction = 4;
    ItemAchieve = 5;
    PlayerDead = 6;
    PlayerLocation = 7;
    PlayerLootNewItem = 8;
    SubBossKill = 9;
    BossKill = 10;
    HighEndPropsInteraction = 11;
    Treasure = 12;
    EntranceFee = 13;
    PlayerKillAssist = 14;
    MonsterKillAssist = 15;
    SubBossKillAssist = 16;
    BossKillAssist = 17;
  }

  enum GameType {
    NONE_MODE = 0;
    DUNGEON_TRIO_NORMAL = 1;
    DUNGEON_TRIO_HIGH_ROLLER = 2;
    DUNGEON_SOLO_NORMAL = 3;
    DUNGEON_DUO_NORMAL = 4;
    DUNGEON_SOLO_HIGH_ROLLER = 5;
    DUNGEON_DUO_HIGH_ROLLER = 6;
    ARENA_DUO = 7;
    ARENA_TRIO = 8;
  }

  enum Floor {
    NONE_FLOOR = 0;
    FLOOR_1F = 1;
    FLOOR_2F = 2;
    FLOOR_3F = 3;
  }

}

message Define_Common {
  enum MetaLocation {
    NONE = 0;
    INGAME = 1;
    PLAY = 2;
    LEADERBOARD = 3;
    LOADOUT = 4;
    MERCHANT = 5;
    TRADE = 6;
    CLASS = 7;
    CHARACTER_SELECT = 8;
    OFFLINE = 9;
    CUSTOMIZE = 10;
    SHOP = 11;
    RECRUIT = 12;
  }

  enum ServerLocation {
    NONE_LOCATION = 0;
    LOCAL = 1;
    QA = 2;
    PLAY_TEST = 3;
    NA = 4;
  }

}

message Define_Class {
  enum Type {
    NONE_TYPE = 0;
    PERK = 1;
    SKILL = 2;
    SPELL = 3;
    MUSIC = 4;
    SHAPE_SHIFT = 5;
  }

  enum Move {
    NONE_MOVE = 0;
    EQUIP = 1;
    UN_EQUIP = 2;
  }

}

message Define_Chat {
  enum Type {
    NONE_TYPE = 0;
    NORMAL = 1;
    WHISPER = 2;
  }

  enum RoomType {
    ROOM_TYPE_WEAPON = 0;
    ROOM_TYPE_ARMOR = 1;
    ROOM_TYPE_UTILITY = 2;
    ROOM_TYPE_ETC = 3;
  }

}

message Define_Trade {
  enum Requirement_Type {
    NONE_REQUIREMENT_TYPE = 0;
    MINIMUM_LEVEL = 1;
    MINIMUM_REINCARNATION_LEVEL = 2;
    INITIATION_FEE = 3;
    MONTHLY_DUES = 4;
    COST_PER_TRADE = 5;
  }

}

message Operate {
  enum Policy {
    NONE_POLICY = 0;
    POLICY_CHAT_LENGTH_MAX = 1;
    POLICY_TRADE_CHANNEL_CHAT_RESEND_TIME_MS = 2;
    POLICY_TRADE_CHANNEL_CHAT_MAX_LINE = 3;
    POLICY_BLOCK_CHARACTER_MAX_LIMIT = 4;
    POLICY_CHAT_RESEND_MS = 5;
    POLICY_CHAT_MAX_LINE = 6;
    POLICY_HIGH_ROLLER_ENTRANCE_FEE = 7;
    POLICY_MATCH_CANCEL_TIME_MS = 8;
    POLICY_GATHERING_HALL_CHAT_RESEND_MS = 9;
    POLICY_GATHERING_HALL_CHAT_MAX_LINE = 10;
    POLICY_GATHERING_HALL_JOIN_MIN_LEVEL = 11;
    POLICY_HIGH_ROLLER_ENTRANCE_MIN_LEVEL = 12;
    POLICY_GOBLIN_HIGH_ROLLER_ENTRANCE_FEE = 13;
    POLICY_GOBLIN_HIGH_ROLLER_ENTRANCE_MIN_LEVEL = 14;
    POLICY_MAX_RANK_BATCH_GAME_COUNT = 15;
    POLICY_ITEM_RARITY_TYPE_NORMAL_VALUE = 16;
    POLICY_ITEM_RARITY_TYPE_HIGH_ROLLER_VALUE = 17;
    POLICY_ITEM_RARITY_TYPE_RUINS_VALUE = 18;
    POLICY_ITEM_RARITY_TYPE_GOBLIN_VALUE = 19;
    POLICY_ITEM_RARITY_TYPE_GOBLIN_HIGH_ROLLER_VALUE = 20;
    POLICY_LEADERBOARD_SCORE_FRACTIONAL_DIGITS = 21;
    POLICY_RUINS_HIGH_ROLLER_ENTRANCE_FEE = 22;
    POLICY_RUINS_HIGH_ROLLER_ENTRANCE_MIN_LEVEL = 23;
    POLICY_ITEM_RARITY_TYPE_RUINS_HIGH_ROLLER_VALUE = 24;
    POLICY_MARKETPLACE_FIXED_LISTING_FEE = 25;
    POLICY_MARKETPLACE_VARIABLE_LISTING_FEE_RATE = 26;
    POLICY_MARKETPLACE_LISTING_EXPIRED_TIME = 27;
    POLICY_MARKETPLACE_TRANSFER_EXPIRED_TIME = 28;
    POLICY_MARKETPLACE_LISTING_LIMIT_COUNT = 29;
    POLICY_MARKETPLACE_MAXIMUM_SALE_AMOUNT = 30;
    POLICY_MARKETPLACE_CLOSED = 31;
    POLICY_DEATH_CAM_ON_OFF = 32;
    POLICY_ENABLE_CLOTHPHYSICS = 33;
    POLICY_ENABLE_CLOTHPHYSICS_USE_TASKTHREAD = 34;
    POLICY_WAITFOR_PARALLEL_CLOTHTASK = 35;
    POLICY_MINDWIPE_PRICE = 36;
    POLICY_ENABLE_SHIPPING_CLIENT_LOG = 37;
    POLICY_SET_SHIPPING_CLIENT_LOG_LEVEL = 38;
    POLICY_OVERRIDE_ANTIALIASING = 39;
    POLICY_ONLY_LOOTED_TRADE_ON = 40;
    POLICY_ENABLE_UPDATE_ENGINE_VARIABLES = 41;
    POLICY_KNIGHT_PROGRAM_LINK_PLAY_TIME_LIMIT = 42;
    POLICY_ACCOUNT_STATUS_UPGRADE = 43;
    POLICY_UPGRADE_CREATION_HIGH_ROLLER_CHECK_SEC = 45;
    POLICY_UPGRADE_CREATION_TRADE_CHECK_SEC = 46;
    POLICY_UPGRADE_CREATION_LISTING_MARKETPLACE_SEC = 47;
  }

}

message Define_Hack {
  enum Policy {
    NONE_GAME_HACK_POLICY = 0;
    GAME_HACK_POLICY_KICK = 1;
    GAME_HACK_POLICY_BLOCK = 2;
    GAME_HACK_POLICY_KICK_AND_BLOCK = 3;
  }

  enum banType {
    NONE_BAN_TYPE = 0;
    Cheater = 1;
    InappropriateName = 2;
    Etc = 3;
    RmtUser = 4;
    RmtSpam = 5;
    AbnormalDetection = 6;
    CheaterGroup = 7;
    ExploitAbuser = 8;
    AbnormalScreen = 9;
    Teaming = 10;
    StreamSniping = 11;
    InappropriateChat = 12;
    InappropriateVoip = 13;
    RacistName = 14;
    RacistChat = 15;
    RacistVoip = 16;
    Refund_Abuse = 17;
  }

}

message Define_Report {
  enum Category {
    NONE_CATEGORY = 0;
    CHEATER = 1;
    INAPPROPRIATE_CHARACTER_NAME = 2;
    STREAM_SNIPING = 3;
    DIRTY_CHATTING = 4;
  }

}

message Define_Log {
  enum Level {
    NONE_LEVEL = 0;
    FATAL = 1;
    ERROR = 2;
    WARNING = 3;
    DISPLAY = 4;
    LOG = 5;
    VERBOSE = 6;
    VERY_VERBOSE = 7;
  }

}

message Define_Karma {
  enum Action {
    NONE_KARMA_ACTION = 0;
    PRAISE = 1;
    PUNISH = 2;
    FORGIVE = 3;
    PUNISH_TEAM_KILLER = 4;
  }

  enum Status {
    NONE_KARMA_STATUS = 0;
    NORMAL = 1;
    TEAM_KILLER = 2;
  }

}

message Define_Coupon {
  enum Type {
    NONE_TYPE = 0;
    MADRINAS = 1;
  }

}

message Define_Shop {
  enum Type {
    SHOP_TYPE_NONE = 0;
    CHARACTER_SKIN = 1;
    ITEM_SKIN = 2;
    EMOTE = 3;
    ACTION = 4;
    LOBBY_EMOTE = 5;
    CLASS_PACKAGE = 6;
    ARMOR_SKIN = 7;
  }

  enum PaymentMethod {
    PAYMENT_NONE = 0;
    BLUE_STONE_SHARD = 1;
    RED_STONE_SHARD = 2;
  }

  enum SalesChannelType {
    CHANNEL_NONE = 0;
    CHANNEL_SHOP = 1;
    CHANNEL_FOUNDERS_PACK = 2;
  }

}

message Define_Reward {
  enum RewardType {
    NONE_TYPE = 0;
    CharacterSkin = 1;
    ItemSkin = 2;
    Emote = 3;
    Action = 4;
    LobbyEmote = 5;
    ClassPackage = 6;
    Item = 7;
    Exp = 8;
    Affinity = 9;
    Stash = 10;
    ArmorSkin = 11;
  }

}

enum CharacterGenderType {
  NONE = 0;
  MAN = 1;
  WOMAN = 2;
  UNISEX = 3;
}

